fix: wrap in projects

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -134,11 +134,12 @@ body {
 
 .container-projects {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 50px;
+    flex-wrap: wrap;
+    justify-content: center;
+    column-gap: 100px;
+    row-gap: 50px;
     color: white;
-    width: 300px;
+    width: 100%;
     margin-top: 20px;
 }
 
